# Restream_Plus

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  start.py
.github/: checksums.env  renovate.json5
.github/workflows/: build-image.yml  ci-docs.yml  ci.yml  release.yml
app/: __init__.py  config.py  logging_setup.py  main.py  version.py
app/api/: __init__.py  api_tokens_api.py  auth.py  deps.py  errors.py  health.py  internal_mtx.py  internal_rtmp.py  middleware.py  run.py  schemas.py  security_api.py  sessions_history.py  settings_api.py  targets.py  ws.py
app/auth/: __init__.py  api_tokens.py  deps.py  key_material.py  last_seen_coalescer.py  rate_limit.py  reprompts.py  sessions.py  usernames.py
app/crypto/: __init__.py  aead.py  kdf.py  passwords.py
app/db/: __init__.py  engine.py  models.py  schema.sql  schema_init.py  session.py  types.py
app/domain/: __init__.py  circuit_breaker.py  credential_policy.py  errors.py  health.py  run_state.py  target.py  target_types.py  worker_state.py
app/fanout/: __init__.py  _testing.py  backoff.py  event_bus.py  ffmpeg_args.py  ffmpeg_urls.py  ffmpeg_worker.py  host_stats.py  process.py  progress_parser.py  redaction.py  supervisor.py  worker.py
app/fanout/flv/: __init__.py  demuxer.py  parser.py  sequence_header.py  tap.py
app/repositories/: __init__.py  _converters.py  api_tokens.py  audit_log.py  credentials.py  sessions.py  sessions_history.py  settings_repo.py  targets.py  users.py
dev/: mediamtx.yml
docker/: Dockerfile  entrypoint.sh  healthcheck.sh  nginx-rtmp.sha  nginx.conf
docker/s6/control-plane/: finish  run
docker/s6/control-plane/log/: run
docker/s6/init-data/: down  up
docker/s6/nginx/: finish  run
docs/: CODE_PLAN.md  ROADMAP.md  SESSION_HANDOFF.md
docs/architecture/: ADR-0001-backend-stack.md  ADR-0002-frontend-stack.md  ADR-0003-rtmp-ingest-and-fanout.md  ADR-0004-docker-shape.md  ADR-0005-auth-model.md  ADR-0006-secret-encryption.md  ADR-0007-persistence.md  ADR-0008-worker-abstraction.md  ADR-0009-credential-model.md  ADR-0010-headless-restart.md  ADR-0011-health-liveness.md  ADR-0012-mediamtx-dev-sidecar.md  ADR-0013-audit-event-vocabulary.md  ADR-0014-spa-url-cap.md  ADR-0015-auto-run-on-publish.md  ADR-0016-enhanced-rtmp-multitrack-ingest.md  ADR-0017-obs-autoconfig-endpoint.md  README.md  design-review-2026-05-15.md  phase-10-design-memo.md  phase-11-design-memo.md  phase-12-design-memo.md  phase-6-design-memo.md  phase-7-design-memo.md  phase-8-design-memo.md  phase-9-design-memo.md  platforms-reference.md  system-overview.md
docs/audit/: hex-audit-2026-05-18.md  hex-audit-2026-05-19.md
docs/ops/: backup-restore.md  branch-protection.md  compose.yaml  deployment.md  ghcr-retention.md  maintenance.md  multitrack-pilot.md  release-checklist.md  upgrade.md
docs/releases/: v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md
docs/research/: obs-multitrack-feasibility.md
docs/ui/: design-system.md  ux-flows.md
scripts/: load-checksums.sh  pilot_ertmp.py  refresh-checksums.sh  refresh-nginx-checksum.sh  regenerate-lockfile.sh
tests/: conftest.py  test_config.py  test_kdf_salt_previous_cleanup.py  test_logging_setup.py
tests/api/: conftest.py  test_auth.py  test_errors.py  test_health.py  test_internal_mtx.py  test_internal_rtmp.py  test_middleware.py  test_phase9_endpoints.py  test_run.py  test_settings_and_tokens.py  test_spa_serving.py  test_targets.py  test_ws.py  test_ws_envelope.py
tests/auth/: conftest.py  test_api_tokens.py  test_deps.py  test_key_material.py  test_last_seen_coalescer.py  test_rate_limit.py  test_reprompts.py  test_sessions.py
tests/crypto/: test_aead.py  test_kdf.py  test_passwords.py
tests/db/: conftest.py  test_audit_log_retention.py  test_engine.py  test_repositories.py  test_schema_init.py
tests/domain/: test_circuit_breaker.py  test_converters.py  test_credential_policy.py  test_errors.py  test_health.py  test_no_outward_imports.py  test_run_state.py  test_target.py  test_target_types.py  test_worker_state.py
tests/fanout/: _fakes.py  conftest.py  test_backoff.py  test_event_bus.py  test_ffmpeg_args.py  test_ffmpeg_urls.py  test_ffmpeg_worker.py  test_host_stats.py  test_no_inward_imports.py  test_progress_parser.py  test_redaction.py  test_supervisor.py
tests/fanout/flv/: _seq_header_vectors.py  test_demuxer.py  test_parser.py  test_sequence_header.py  test_tap.py
tests/scripts/: test_pilot_ertmp.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/scripts/: check-bundle-size.mjs
web/src/: App.tsx  main.tsx  messages.ts  router.tsx  vite-env.d.ts
web/src/components/: AppShell.tsx  AuthLayout.tsx  AuthRepromptHost.tsx  Banner.tsx  Button.test.tsx  Button.tsx  CopyToClipboard.tsx  DestructiveConfirm.tsx  EmptyState.tsx  ErrorBoundary.tsx  FormField.test.tsx  FormField.tsx  HeroCard.tsx  InlinePromptCard.tsx  Input.tsx  LiveStatsStrip.tsx  LogViewer.tsx  MetricGrid.tsx  OneTimeRevealBanner.tsx  RecentEventsMenu.tsx  RecentEventsProvider.tsx  ReconnectingBanner.tsx  RequireAuth.tsx  RunStateBadge.tsx  SecretField.tsx  Select.tsx  Skeleton.tsx  Slider.tsx  Sparkline.tsx  StatusStreamHost.tsx  TargetDetails.tsx  TargetTile.tsx  TypeToConfirmDialog.tsx  formFieldContext.ts
web/src/components/settings/: SettingsSection.tsx  SettingsSidebar.tsx
web/src/hooks/: useAbout.ts  useApiTokens.ts  useAuthReprompt.ts  useHttpSessions.ts  useLiveMetrics.ts  useRunHistory.ts  useRunState.ts  useSettings.ts  useTargets.ts  useTargetsAdmin.ts  useWsConnectionStatus.ts
web/src/lib/: api.ts  cn.test.ts  cn.ts  errors.ts  eventBus.ts  formErrors.ts  liveMetricsReducer.test.ts  liveMetricsReducer.ts  queryClient.ts  queryKeys.ts  safeNext.ts  targetTypeSpecs.ts  useReducedMotion.ts  ws.ts  wsReducer.test.ts  wsReducer.ts
web/src/lib/schemas/: _shared.ts  about.ts  auth.ts  (+7 more)
web/src/pages/: Dashboard.tsx  Login.tsx  NotFound.tsx  Unlock.tsx
web/src/test/: setup.ts
web/src/theme/: ThemeManager.ts  ThemeToggle.tsx  tokens.css
(+12 files in other folders)
