[project]
name = "restream-plus"
version = "0.1.0"
description = "Self-hosted RTMP restreamer with web control panel."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Restream_Plus contributors" }]

dependencies = [
  # HTTP + WebSocket
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "websockets>=13,<14",
  # Required for FastAPI's `Form(...)` parameters (nginx-rtmp webhooks).
  "python-multipart>=0.0.18,<0.0.20",
  # Models, settings, validation
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  # Persistence
  "sqlalchemy[asyncio]>=2.0.36,<2.1",
  "aiosqlite>=0.20,<0.21",
  # Security
  "argon2-cffi>=23.1,<24",
  "cryptography>=43,<44",
  # Logging
  "structlog>=24.4,<25",
  # HTTP client (for outbound platform pings if needed)
  "httpx>=0.27,<0.28",
  # System utilities
  "anyio>=4.6,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=5,<6",
  "hypothesis>=6.115,<7",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.7,<0.8",
  "mypy>=1.13,<2",
  "httpx>=0.27,<0.28",
  # Hash-pinned in CI so `pip install --no-build-isolation -e .`
  # never network-resolves the PEP 517 build backend (security-reviewer L5).
  "hatchling>=1.25,<2",
]

[project.scripts]
restream-plus = "app.main:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]
extend-exclude = ["web/", "docs/", "docker/"]

[tool.ruff.lint]
# Comprehensive rule set. Tightened, not exhaustive.
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "RUF",    # ruff-specific
  "ASYNC",  # flake8-async (we live in asyncio)
  "S",      # bandit security checks
  "N",      # pep8-naming
  "PIE",    # flake8-pie
  "PT",     # pytest style
  "SIM",    # simplify
  "TID",    # tidy imports
  "ERA",    # eradicate commented code
]
ignore = [
  "S101",   # use of `assert` — we use it for invariants in non-test paths
  "B008",   # function call in default argument — FastAPI Depends pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ERA"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["argon2.*", "aiosqlite.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:passlib.*",
]
