[project]
name = "restream-plus"
version = "1.1.0"
description = "Self-hosted RTMP restreamer with web control panel."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Restream_Plus contributors" }]

dependencies = [
  # HTTP + WebSocket
  # fastapi 0.125 is the lowest version that allows starlette>=0.49.1
  # — 0.118-0.124 cap starlette<0.49, blocking the GHSA-7f5h-v6xp-fcq8
  # HIGH fix. Range deliberately narrow (`<0.130`) to minimize the
  # API-surface change vs the previous 0.115 baseline; a wide bump to
  # 0.136 broke `tests/api/test_phase9_endpoints.py::
  # test_rotate_passphrase_same_returns_422` (500 instead of 422).
  "fastapi>=0.125,<0.130",
  # Pin starlette to 0.49.x — 0.50.0 broke
  # tests/api/test_phase9_endpoints.py::test_rotate_passphrase_same_returns_422
  # (raised HTTPException(422) → response was 500). 0.49.x has the
  # GHSA-7f5h-v6xp-fcq8 HIGH fix without that regression.
  "starlette>=0.49.1,<0.50",
  "uvicorn[standard]>=0.32,<0.33",
  "websockets>=13,<14",
  # Required for FastAPI's `Form(...)` parameters (nginx-rtmp webhooks).
  # 0.0.27 ships the fix for GHSA-pp6c-gr5w-3c5g (HIGH); the old
  # 0.0.18/19 line is below that floor.
  "python-multipart>=0.0.27,<1",
  # Models, settings, validation
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  # Persistence
  "sqlalchemy[asyncio]>=2.0.36,<2.1",
  "aiosqlite>=0.20,<0.21",
  # Security
  "argon2-cffi>=23.1,<24",
  # cryptography 46 fixes HIGH GHSA-r6ph-v2qm-q3c2 (surfaced by Phase 11
  # grype scan after the python-multipart/starlette pass closed the
  # earlier HIGH set). Per ADR-0006 quarantine, this is a
  # security-justified bump — Renovate's `python-deps-crypto` group
  # remains automerge=false (PB-16) so a future bump still requires
  # human review.
  "cryptography>=46,<47",
  # Logging
  "structlog>=24.4,<25",
  # HTTP client (for outbound platform pings if needed)
  "httpx>=0.27,<0.28",
  # System utilities
  "anyio>=4.6,<5",
  # XML defense-in-depth — parses nginx-rtmp's loopback stat endpoint
  # in app/fanout/host_stats.py. The source is on 127.0.0.1 (no
  # external attacker reach), but defusedxml is ~60 KB and removes the
  # XXE / billion-laughs / entity-expansion attack class entirely.
  # Architect Rule №4 review on the live-stats feature.
  "defusedxml>=0.7,<0.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=5,<6",
  "hypothesis>=6.115,<7",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.7,<0.8",
  "mypy>=1.13,<2",
  "httpx>=0.27,<0.28",
  # Type stubs for defusedxml (runtime dep added for the host-stats
  # nginx-rtmp XML parser). Dev-only — mypy --strict needs them.
  "types-defusedxml>=0.7,<0.8",
  # Hash-pinned in CI so `pip install --no-build-isolation -e .`
  # never network-resolves the PEP 517 build backend (security-reviewer L5).
  "hatchling>=1.25,<2",
  # Required by hatchling's `build_editable` hook (PEP 660). Without it,
  # CI's `pip install --no-build-isolation -e .` fails with
  # `ModuleNotFoundError: No module named 'editables'` because hatchling
  # only soft-imports `editables` at editable-install time.
  "editables>=0.5,<1",
]

[project.scripts]
restream-plus = "app.main:run"

[build-system]
# `editables` is required by hatchling's PEP 660 `build_editable` hook.
# Listed here so a non-isolated `pip install -e .` (i.e. without our CI's
# `--no-build-isolation`) still works without ModuleNotFoundError. The dev
# extra above hash-pins both for CI's `--no-build-isolation` flow.
requires = ["hatchling>=1.25", "editables>=0.5"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]
extend-exclude = ["web/", "docs/", "docker/"]

[tool.ruff.lint]
# Comprehensive rule set. Tightened, not exhaustive.
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "RUF",    # ruff-specific
  "ASYNC",  # flake8-async (we live in asyncio)
  "S",      # bandit security checks
  "N",      # pep8-naming
  "PIE",    # flake8-pie
  "PT",     # pytest style
  "SIM",    # simplify
  "TID",    # tidy imports
  "ERA",    # eradicate commented code
]
ignore = [
  "S101",   # use of `assert` — we use it for invariants in non-test paths
  "B008",   # function call in default argument — FastAPI Depends pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ERA"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["argon2.*", "aiosqlite.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:passlib.*",
]
